# test

./: README.md  pyproject.toml
WebScrape/: pyproject.toml
WebScrape/app/: main.py
app/: .gitignore  alembic.ini  database.py  main.py  models.py  scrape.py
app/alembic/: env.py
app/alembic/versions/: 409c7c5564ca_add_content_column.py  68a6b80f3dfe_initial_migration.py  723449642f69_initial_migration2.py  d7cc5d4e8801_add_content_column.py
app/static/: scripts.js  styles.css
app/templates/: index.html  scripts.js  styles.css
