[project]
name = "webscrape"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
    "alembic>=1.15.1",
    "beautifulsoup4>=4.13.3",
    "fastapi>=0.115.11",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
]
